grammar.js
        source_file: $ => seq(optional($._gap), $._hoonTall, repeat(seq($._gap, $._hoonTall)), optional($._gap)),

        _hoonTall: $ => choice($._runeTall, $._hoonWide),
        _hoonWide: $ => choice(
            $._runeWide,
            $._value,
            $._irregularForms
        ),

        _specTall: $ => choice($._bucTall, $._specWide, $.cenhepTall, $.cenlusTall, seq("$;", $._gap, $._specTall),
        ),//TODO: add all cen runes
        _specWide: $ => choice(
            $.term,
            $.aura,
            $.typeUnion,
            prec.left(0, seq(choice($.parent, $.name), repeat(
                seq(":", choice($.parent, $.name, $.number, $.cell, $.stripFace))
            ))),// $.composeExpressions,
            alias(prec.left(0, seq(optional($._specWide), "=", $._specWide)), $.wrapFace),// $.wrapFace,
            $.mold,
            seq("[", $._specWide, repeat(seq($._space, $._specWide)), "]"), //$.cell
            $.normalize,
            $._bucWide,
            seq("$;", "(", $._specWide, ")"),
            $.gateCall, $.cenhepWide, $.cenlusWide,
            // $.wrapFace2,
            $.factoryGate,
        ),
        _wingTall: $ => choice($._wingWide, $.tisgalTall, $.tisgarTall),
        _wingWide: $ => choice(
            $.name,
            $.parent,
            $.gateCall,
            $.lark,
            $.wingPath,
            $.fullContext,
            $.specialIndex,
            $.wrapFace,
            $.tisgalWide,
            $.tisgarWide,
            $.cell,
        ),
        // _skinTall: $ => choice($._skinWide),
        // _skinWide: $ => choice(
        //     $.name,
        //     $.mold,
        //     $.cell,
        //     $.gateCall,
        //     $.term,
        //     $.parent,
        //     $.normalize,
        //     $.aura,
        //     prec.left(0, seq($._skinWide, "=", choice($._skinWide, seq($.name, ":", $.name)))),
        //     seq("=", choice($._skinWide, seq($.name, ":", $.name))),
        // ),
        _skinTall: $ => choice($._specTall, $.addCell),
        _skinWide: $ => choice($._specWide, $.addCell),
        _termTall: $ => choice($._termWide),
        _termWide: $ => choice(
            $.name, $.term
        ),
        _valueTall: $ => $._hoonTall,
        _valueWide: $ => $._hoonWide,
        rune: $ => "感#)@!(",
        tisgarTall: $ => seq(alias("=>", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        tisbarTall: $ => seq(alias("=|", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        tiscolTall: $ => seq(alias("=:", $.rune), $._gap, repeat1(seq($._wingTall, $._gap, $._hoonTall, $._gap)), $.seriesTerminator, $._gap, $._hoonTall),
        tiscomTall: $ => seq(alias("=,", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        tisdotTall: $ => seq(alias("=.", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        tishepTall: $ => seq(alias("=-", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        tisketTall: $ => seq(alias("=^", $.rune), $._gap, $._skinTall, $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        tisgalTall: $ => seq(alias("=<", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        tislusTall: $ => seq(alias("=+", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        tismicTall: $ => seq(alias("=;", $.rune), $._gap, $._skinTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        tissigTall: $ => seq(alias("=~", $.rune), $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        tistarTall: $ => seq(alias("=*", $.rune), $._gap, choice($._termTall, seq($.name, "=", $._specWide)), $._gap, $._hoonTall, $._gap, $._hoonTall),
        tiswutTall: $ => seq(alias("=?", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutbarTall: $ => seq(alias("?|", $.rune), $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        wuthepTall: $ => seq(alias("?-", $.rune), $._gap, $._wingTall, $._gap, repeat1(seq($._specTall, $._gap, $._valueTall, $._gap)), $.seriesTerminator),
        wutcolTall: $ => seq(alias(seq("?", ":"), $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutdotTall: $ => seq(alias("?.", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutketTall: $ => seq(alias("?^", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutgalTall: $ => seq(alias("?<", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutgarTall: $ => seq(alias("?>", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutlusTall: $ => seq(alias("?+", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, repeat1(seq($._specTall, $._gap, $._hoonTall, $._gap)), $.seriesTerminator),
        wutpamTall: $ => seq(alias("?&", $.rune), $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        wutpatTall: $ => seq(alias("?@", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        wutsigTall: $ => seq(alias("?~", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        wuttisTall: $ => seq(alias("?=", $.rune), $._gap, $._specTall, $._gap, $._wingTall),
        wutzapTall: $ => seq(alias("?!", $.rune), $._gap, $._hoonTall),
        zapcomTall: $ => seq(alias("!,", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        zapgarTall: $ => seq(alias("!>", $.rune), $._gap, $._hoonTall),
        zapgalTall: $ => seq(alias("!<", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        zapmicTall: $ => seq(alias("!;", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        zaptisTall: $ => prec(1, seq(alias(seq("!", "="), $.rune), $._gap, $._hoonTall)),
        zapwutTall: $ => prec(1, seq(alias(seq("!", "?"), $.rune), $._gap, choice($.number, seq("[", $.number, $._space, $.number, "]")), $._gap, $._hoonTall)),
        zappatTall: $ => seq(alias("!@", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        zapcolTall: $ => seq(alias("!:", $.rune), $._gap, $._hoonTall),
        zapdotTall: $ => seq(alias("!.", $.rune), $._gap, $._hoonTall),

        tisgarWide: $ => seq(alias("=>", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        tisbarWide: $ => seq(alias("=|", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        tiscolWide: $ => seq(alias("=:", $.rune), "(", $._wingWide, $._space, $._hoonWide, repeat(seq(",", $._space, $._wingWide, $._space, $._hoonWide)), $._space, $._hoonWide, ")"),
        tiscomWide: $ => seq(alias("=,", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        tisdotWide: $ => seq(alias("=.", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        tishepWide: $ => seq(alias("=-", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        tisketWide: $ => seq(alias("=^", $.rune), "(", $._skinWide, $._space, $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        tisgalWide: $ => seq(alias("=<", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        tislusWide: $ => seq(alias("=+", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        tismicWide: $ => seq(alias("=;", $.rune), "(", $._skinWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        tissigWide: $ => seq(alias("=~", $.rune), "(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        tistarWide: $ => seq(alias("=*", $.rune), "(", choice($._termWide, seq($.name, "=", $._specWide)), $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        tiswutWide: $ => seq(alias("=?", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        wutbarWide: $ => seq(alias("?|", $.rune), "(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        wuthepWide: $ => seq(alias("?-", $.rune), "(", $._wingWide, $._space, $._specWide, $._space, $._valueWide, repeat(seq(",", $._space, $._specWide, $._space, $._valueWide)), ")"),
        wutcolWide: $ => seq(alias(seq("?", ":"), $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        wutdotWide: $ => seq(alias("?.", $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        wutketWide: $ => seq(alias("?^", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        wutgalWide: $ => seq(alias("?<", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        wutgarWide: $ => seq(alias("?>", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        wutlusWide: $ => seq(alias("?+", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._specWide, $._space, $._hoonWide, repeat(seq(",", $._space, $._specWide, $._space, $._hoonWide)), ")"),
        wutpamWide: $ => seq(alias("?&", $.rune), "(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        wutpatWide: $ => seq(alias("?@", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        wutsigWide: $ => seq(alias("?~", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        wuttisWide: $ => seq(alias("?=", $.rune), "(", $._specWide, $._space, $._wingWide, ")"),
        wutzapWide: $ => seq(alias("?!", $.rune), "(", $._hoonWide, ")"),
        zapcomWide: $ => seq(alias("!,", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        zapgarWide: $ => seq(alias("!>", $.rune), "(", $._hoonWide, ")"),
        zapgalWide: $ => seq(alias("!<", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        zapmicWide: $ => seq(alias("!;", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        zaptisWide: $ => prec(1, seq(alias(seq("!", "="), $.rune), "(", $._hoonWide, ")")),
        zapwutWide: $ => prec(1, seq(alias(seq("!", "?"), $.rune), "(", choice($.number, seq("[", $.number, $._space, $.number, "]")), $._space, $._hoonWide, ")")),
        zappatWide: $ => seq(alias("!@", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        zapcolWide: $ => seq(alias("!:", $.rune), "(", $._hoonWide, ")"),
        zapdotWide: $ => seq(alias("!.", $.rune), "(", $._hoonWide, ")"),
        zapzap: $ => alias("!!", $.rune),

        gateCall: $ => seq("(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        tankTape: $ => seq("<", $._hoonWide, repeat(seq($._space, $._hoonWide)), ">"),
        name: $ => choice("$", /[a-zA-Z][a-zA-Z0-9-]*/),
        number: $ => prec.right(0, choice(
            seq(optional(choice("--", "-")), choice(
                seq(/[0-9]{1,3}/, repeat(seq(".", optional($._gap), /[0-9]{3}/))), //@ud
                seq(/0x[0-9a-fA-F]{1,4}/, repeat(seq(".", optional($._gap), /[0-9a-fA-F]{4}/))), //@ux
                seq(/0b[01]{1,4}/, repeat(seq(".", optional($._gap), /[01]{4}/))), //@ub
                /0i[0-9]+/, //@ui
                seq(/0v[0-9a-v]{1,5}/, repeat(seq(".", optional($._gap), /[0-9a-v]{5}/))), //@uv
                seq(/0w[0-9a-zA-Z-~]{1,5}/, repeat(seq(".", optional($._gap), /[0-9a-zA-Z-~]{5}/))) //@uw
            )
            ), seq(".", optional(choice("~", "~~", "~~~")), /[0-9]+(.[0-9]+)?/) //@rh,@rs,@rd,@rq
        )),
        term: $ => choice(seq("%", choice($.name, $.number, $.date, seq("'", /[^\n']*/, "'"), $.knot, "~", $.ipAddress, $.bitcoinAddress, $.boolean, $.unicode, $.phonemic))),
        aura: $ => /@[a-zA-Z]*/,
        _space: $ => " ",
        _gap: $ => alias(repeat1(/ +|\n/), $.Gap),
        fullContext: $ => ".",
        lark: $ => choice("+", "-", /(([-+][<>])+)|([-+]([<>][-+])+)/),
        //strings
        string: $ => choice($.tape, $.cord, $.knot),
        specialIndex: $ => seq(choice("+", "|", "&"), /[0-9]+/),
        wingPath: $ => prec.left(0, seq(choice($.lark, $.fullContext, $.name, $.parent, $.specialIndex, $.stripFace), repeat1(seq(".", choice($.lark, $.fullContext, $.name, $.parent, $.specialIndex, $.stripFace))))),
