test/corpus/tape.txt
==================
single line tape
==================
"basic tape"
---

(source_file
    (string (tapeOrCord))
)

==================
dot combined tape
==================
"tape1"."tape2"
---

(source_file
    (string (tapeOrCord))
)

==================
multi-line tape
==================
"""
multi
line
tape

hello
"""
---

(source_file
    (string (tapeOrCord))
)

==================
interpolated tape
==================
"{(scow %p our)}"
"{?:(ok "built " "FAILED")}  {(spud path)}"
---

(source_file
    (string (tapeOrCord
        (interpolation
            (gateCall (name) (term (name)) (name))
        )
    ))
    (Gap)
    (string (tapeOrCord
        (interpolation
            (wutcolWide (rune) (rune) (name) (string (tapeOrCord)) (string (tapeOrCord)))
        )
        (interpolation
            (gateCall (name) (name))
        )
    ))
)

==================
interpolated multiline tape
==================
"""
{(scow %p our)}
{<@ud>}
"""
---

(source_file
    (string (tapeOrCord
        (interpolation
            (gateCall (name) (term (name)) (name))
        )
        (interpolation
            (tankTape (aura))
        )
    ))
)
